# opencl-project

./: CMakeLists.txt  README.md
src/opencl-project/: Algorithm.cpp  Algorithm.h  CLApp.cpp  CLApp.h  cl_functions.cl  main.cpp
